tests/snapshots/run_wpt_conformance__coreml_clamp_uint64_1D_tensor_with_Number_min_and_max.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp uint64 1D tensor with Number min and max, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported graph cast dtype Uint64

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: u64[4];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=5294967290, minValue=5);
  }

  outputs { clampOutput; }
}
