tests/snapshots/run_wpt_conformance__coreml_concat_four_float16_3D_tensors_of_same_others_dimensions_except_different_2nd_dimension_along_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat four float16 3D tensors of same others dimensions except different 2nd dimension along axis 1",
    "coreml",
    "PASS",
)
